force-app/main/default/objects/Mandate__c/Mandate__c.object-meta.xml
<CustomObject>
    <description>Tracks UPI and eNACH mandate details for auto-debit EMI collection. Stores mandate status, bank/UPI details, and provider reference from the mandate API provider.</description>
    <label>Mandate</label>
    <nameField>
        <displayFormat>MND-{YYYY}-{000000}</displayFormat>
        <label>Mandate Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>