force-app/main/default/objects/Mandate__c/fields/Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date__c</fullName>
    <label>Activated Date</label>
    <type>DateTime</type>
</CustomField>