force-app/main/default/objects/Mandate__c/fields/Bank_Account_Masked__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Masked__c</fullName>
    <label>Bank Account (Masked)</label>
    <type>Text</type>
    <length>20</length>
    <description>Stores masked bank account number (XXXX last 4 digits only). Never store full account number.</description>
</CustomField>