force-app/main/default/objects/Mandate__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <type>Text</type>
    <length>11</length>
</CustomField>