force-app/main/default/objects/Mandate__c/fields/Mandate_Type__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Type__c</fullName>
    <label>Mandate Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>UPI</fullName><default>false</default><label>UPI</label></value>
            <value><fullName>eNACH</fullName><default>false</default><label>eNACH</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>