force-app/main/default/objects/Mandate__c/fields/Provider_Reference__c.field-meta.xml
<CustomField>
    <fullName>Provider_Reference__c</fullName>
    <label>Provider Reference</label>
    <type>Text</type>
    <length>255</length>
    <description>Mandate ID returned by the UPI/eNACH provider (e.g. NPCI reference). Used for webhook callbacks and status checks.</description>
</CustomField>