force-app/main/default/objects/Mandate__c/fields/VPA__c.field-meta.xml
<CustomField>
    <fullName>VPA__c</fullName>
    <label>VPA (UPI ID)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>